--- a/P1/Movimiento/SkeletonBasics-WPF/MainWindow.xaml
+++ b/P1/Movimiento/SkeletonBasics-WPF/MainWindow.xaml
@@ -53,19 +53,16 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Row="0" Margin="0 0 0 20">
-            <Image DockPanel.Dock="Left" Source="Images\Logo.png" Stretch="Fill" Height="32" Width="81" Margin="0 10 0 5"/>
-            <TextBlock DockPanel.Dock="Right" Margin="0 0 -1 0" VerticalAlignment="Bottom" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="18">Skeleton Basics</TextBlock>
-            <Image Grid.Column="1" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="0 0 0 5"/>
+        <DockPanel Grid.Row="0">
+            <TextBlock DockPanel.Dock="Right" Margin="0,0,-1,-22" VerticalAlignment="Bottom" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="18" Width="120" Height="46"><Run Language="es-es" Text="Movimiento 15"/><LineBreak/><Run FontSize="12" Language="es-es" Text="Skeleton-Basics-WPF"/></TextBlock>
         </DockPanel>
         <Viewbox Grid.Row="1" Stretch="Uniform" HorizontalAlignment="Center">
-            <Image Name="Image" Width="640" Height="480"/>
+            <Image Name="Image" Width="640" Height="534"/>
         </Viewbox>
-        <CheckBox Grid.Row="2" Style="{StaticResource SquareCheckBox}" Content="Seated Mode" Height="Auto" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 10 10 10" Name="checkBoxSeatedMode" Checked="CheckBoxSeatedModeChanged" Unchecked="CheckBoxSeatedModeChanged"/>
         <StatusBar Grid.Row="3" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
             <StatusBarItem Padding="0 0 0 10">
-                <TextBlock Name="statusBarText" Margin="-1 0 0 0">Click 'Seated' to change skeletal pipeline type!</TextBlock>
+                <TextBlock x:Name="statusBarText" Margin="-1 0 0 0"><Run Language="es-es" Text="Based on skeleton-basics-wpf. Co. Microsoft."/></TextBlock>
             </StatusBarItem>
-        </StatusBar>       
+        </StatusBar>
     </Grid>
 </Window>
